<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NetworkTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_choise">choose test item</string>
    <string name="gateway">gateway</string>
    <string name="title_gateway">input ping gateway address</string>
    <string name="internet">internet</string>
    <string name="title_internet">input ping internet address</string>
    <string name="begin_test">begin test</string>
    <string name="title_autolaunch">auto launch</string>
    <string name="title_result">test result</string>
    <string name="delay_ping">delay ping bootup complete（second）</string>
    <string name="delay_ping_time">input delay time</string>
    <string name="key_test">key test</string>
    <string name="delay_test">delay test bootup complete（second）</string>
    <string name="delay_test_time">input delay time</string>
    
    <string name="reboot_style">please select reboot style</string>
    <string name="reboot_style_reboot">linux reboot cmd</string>
    <string name="reboot_style_powerkey">send power key</string>
    <string name="reboot_style_shutdown">call shutdown method</string>
    <string name="reboot_style_standby">call standby bin</string>
    

</resources>
