<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dsp.networktest.MainActivity" >
    
	<TextView  
	    android:id="@+id/teviewRebootStyle"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:text="@string/reboot_style"
	/>
	<RadioGroup
        android:id="@+id/rgRebootStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/teviewRebootStyle"
        android:contentDescription="@string/reboot_style" >
	    <RadioButton
	        android:id="@+id/radioButtonReboot"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reboot_style_reboot" />
	    <RadioButton
	        android:id="@+id/radioButtonPowerkey"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reboot_style_powerkey" />
	    <RadioButton
	        android:id="@+id/radioButtonShutdown"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reboot_style_shutdown" />
	    <RadioButton
	        android:id="@+id/radioButtonStandby"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/reboot_style_standby" />
    </RadioGroup>
    
    <Switch
        android:id="@+id/switch_autolaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgRebootStyle"
        android:text="@string/title_autolaunch" />
    
    <TextView 
        android:id="@+id/textview_delay_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_autolaunch"
        android:text="@string/delay_ping"
        />
    
    <EditText
        android:id="@+id/etext_delay_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_delay_ping"
        android:inputType="number"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/delay_ping_time" />
    
    <TextView
        android:id="@+id/textview_top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etext_delay_ping"
        android:text="@string/title_choise" />

    <CheckBox
        android:id="@+id/cbox_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_top_title"
        android:text="@string/gateway" />
    
    <!--
    <TextView
        android:id="@+id/tview_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbox_gateway"
        android:text="@string/title_gateway" />
    -->
    
    <EditText
        android:id="@+id/etext_gateway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbox_gateway"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/title_gateway" />
    
    <CheckBox
        android:id="@+id/cbox_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etext_gateway"
        android:text="@string/internet" />
    
    <EditText
        android:id="@+id/etext_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbox_internet"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/title_internet" />
    
    <Button
        android:id="@+id/button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etext_internet"
        android:text="@string/begin_test" />
    
    <TextView
        android:id="@+id/textview_ping_result01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_test"
        android:text="@string/title_result" />
    
    <TextView
        android:id="@+id/textview_ping_result02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_ping_result01" />
    
    <ProgressBar
        android:id="@+id/pbar_ping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_ping_result02"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_keytest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etext_internet"
        android:layout_toRightOf="@+id/button_test"
        android:text="@string/key_test" />

    
    
</RelativeLayout>
